# otters

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
otters/: __init__.py  batcher.py  schema.py
src/: batcher.rs  compute.rs  lib.rs  pipeline.rs
src/builtins/: ema.rs  mod.rs  rolling_mean.rs  vwap.rs  zscore.rs
src/sinks/: mod.rs  parquet_writer.rs
src/sources/: mod.rs  parquet_reader.rs
tests/: batcher.py  schema.py
