[package]
name = "otters"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "otters"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58.0.0", features = ["pyarrow"] }
crossbeam-channel = "0.5.15"
parquet = { version = "58.0.0", features = ["arrow"] }
pyo3 = "0.28.0"
